<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragment_search">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:backgroundTint="@android:color/white"
            android:indeterminateTint="#1a09d6"
            android:layout_marginTop="-7dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_fs_keyword" />

        <EditText
            android:id="@+id/main_fs_et_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/main_fs_keyword_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_fs_category" />

        <Spinner
            android:id="@+id/main_fs_sp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category"
            android:padding="8dp">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_fs_distance" />

        <EditText
            android:id="@+id/main_fs_et_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="10"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/main_fs_sp_distance_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/distance_unit"
            android:padding="8dp">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_fs_from" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/main_fs_radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/main_fs_from_radio1" />

            <RadioButton
                android:id="@+id/main_fs_radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fs_from_radio2" />

            <EditText
                android:id="@+id/main_fs_et_radio2_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_fs_from_radio2_hint" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/main_fs_button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_fs_search" />

            <Button
                android:id="@+id/main_fs_button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_fs_clear" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>
